--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
     <title>Gallery</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/gallery.css">
     <script src="https://kit.fontawesome.com/faea18554b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -35,7 +36,105 @@
             </ul>
         </div>
     </nav>
-    
+
+    <section class = "gallery">
+        <div class="grid_container">
+        <div class = "gallery_grid">
+            <div class="grid_items">
+                <div class = "gallery_card">
+                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
+                    <div class="card_info">
+                    <p class = "gallery_submitted"> submitted by *name*</p>
+                    <p class = "gallery_date">12/09/2020</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_items">
+                <div class = "gallery_card">
+                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
+                    <div class="card_info">
+                    <p class = "gallery_submitted"> submitted by *name*</p>
+                    <p class = "gallery_date">12/09/2020</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_items">
+                <div class = "gallery_card">
+                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
+                    <div class="card_info">
+                    <p class = "gallery_submitted"> submitted by *name*</p>
+                    <p class = "gallery_date">12/09/2020</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_items">
+                <div class = "gallery_card">
+                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
+                    <div class="card_info">
+                    <p class = "gallery_submitted"> submitted by *name*</p>
+                    <p class = "gallery_date">12/09/2020</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_items">
+                <div class = "gallery_card">
+                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
+                    <div class="card_info">
+                    <p class = "gallery_submitted"> submitted by *name*</p>
+                    <p class = "gallery_date">12/09/2020</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_items">
+                <div class = "gallery_card">
+                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
+                    <div class="card_info">
+                    <p class = "gallery_submitted"> submitted by *name*</p>
+                    <p class = "gallery_date">12/09/2020</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
     <script src="/js/script.js"></script>
 </body>
+<footer>
+    <div class = "grid">
+        <div class = "grid_item">
+            <h2 class = "footer_h2">Learn more about biking</h2>
+            <a class ="footer_a" href="#">Why mountain biking is a great form of exercise</a>
+            <a class ="footer_a" href="#">How cycling to work will save the planet</a>
+            <a class ="footer_a" href="#">Bikes vs cars for commuting</a>
+            <a class ="footer_a" href="#">Bike maintenance guide</a>
+        </div>
+        <div class = "grid_item">
+            <h2 class = "footer_h2">Events</h2>
+            <a class ="footer_a" href="#">Races</a>
+            <a class ="footer_a" href="#">Mountain biking team</a>
+            <a class ="footer_a" href="#">Custom building club</a>
+            
+        </div>
+        <div class = "grid_item">
+            <h2 class = "footer_h2">More from us</h2>
+            <a class ="footer_a" href="#">About us</a>
+            <a class ="footer_a" href="#">Blog</a>
+            <a class ="footer_a" href="#">Career opportunities</a>
+        </div>
+        <div class = "grid_item">
+            <h2>Support</h2>
+            <a class ="footer_a" href="#">Contact us</a>
+            <a class ="footer_a" href="#">Help</a>
+        </div>
+    </div>
+
+    <div class = "socials">
+        <a class = "social_link" href="#"><i class="fab fa-facebook-f"></i></a>
+        <a class = "social_link" href="#"><i class="fab fa-instagram"></i></a>
+        <a class = "social_link" href="#"><i class="fab fa-twitter"></i></a>
+        <a class = "social_link" href="#"><i class="fab fa-youtube"></i></a>
+        <a class = "social_link" href="#"><i class="fab fa-reddit"></i></a>
+    </div>
+
+</footer>
 </html>
