--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <section>
         <div class = "container">
             <div class="content_box">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/LDU_Txk06tM" 
+        <iframe class = "youtube_vid"  src="https://www.youtube.com/embed/LDU_Txk06tM" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen></iframe>
@@ -86,48 +86,6 @@
         </form>
     </div>
     </section>
-    <footer>
-        <div class = "grid">
-            <div class = "grid_item">
-                <h2 class = "footer_h2">Learn more about biking</h2>
-                <a class ="footer_a" href="#">Why mountain biking is a great form of exercise</a>
-                <a class ="footer_a" href="#">How cycling to work will save the planet</a>
-                <a class ="footer_a" href="#">Bikes vs cars for commuting</a>
-                <a class ="footer_a" href="#">Bike maintenance guide</a>
-            </div>
-            <div class = "grid_item">
-                <h2 class = "footer_h2">Events</h2>
-                <a class ="footer_a" href="#">Races</a>
-                <a class ="footer_a" href="#">Mountain biking team</a>
-                <a class ="footer_a" href="#">Custom building club</a>
-                
-            </div>
-            <div class = "grid_item">
-                <h2 class = "footer_h2">More from us</h2>
-                <a class ="footer_a" href="#">About us</a>
-                <a class ="footer_a" href="#">Blog</a>
-                <a class ="footer_a" href="#">Career opportunities</a>
-            </div>
-            <div class = "grid_item">
-                <h2>Support</h2>
-                <a class ="footer_a" href="#">Contact us</a>
-                <a class ="footer_a" href="#">Help</a>
-            </div>
-        </div>
-
-        <div class = "socials">
-            <a class = "social_link" href="#"><i class="fab fa-facebook-f"></i></a>
-            <a class = "social_link" href="#"><i class="fab fa-instagram"></i></a>
-            <a class = "social_link" href="#"><i class="fab fa-twitter"></i></a>
-            <a class = "social_link" href="#"><i class="fab fa-youtube"></i></a>
-            <a class = "social_link" href="#"><i class="fab fa-reddit"></i></a>
-        </div>
-
-  </footer>
-
-
-
-
 
 <script src="/js/script.js"></script>
 <script src="/js/map.js"></script>
@@ -136,4 +94,42 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3FozSB6AqIxgmTqrEx7Hro8P
 </script> -->
 
 </body>
+<footer>
+    <div class = "grid">
+        <div class = "grid_item">
+            <h2 class = "footer_h2">Learn more about biking</h2>
+            <a class ="footer_a" href="#">Why mountain biking is a great form of exercise</a>
+            <a class ="footer_a" href="#">How cycling to work will save the planet</a>
+            <a class ="footer_a" href="#">Bikes vs cars for commuting</a>
+            <a class ="footer_a" href="#">Bike maintenance guide</a>
+        </div>
+        <div class = "grid_item">
+            <h2 class = "footer_h2">Events</h2>
+            <a class ="footer_a" href="#">Races</a>
+            <a class ="footer_a" href="#">Mountain biking team</a>
+            <a class ="footer_a" href="#">Custom building club</a>
+            
+        </div>
+        <div class = "grid_item">
+            <h2 class = "footer_h2">More from us</h2>
+            <a class ="footer_a" href="#">About us</a>
+            <a class ="footer_a" href="#">Blog</a>
+            <a class ="footer_a" href="#">Career opportunities</a>
+        </div>
+        <div class = "grid_item">
+            <h2>Support</h2>
+            <a class ="footer_a" href="#">Contact us</a>
+            <a class ="footer_a" href="#">Help</a>
+        </div>
+    </div>
+
+    <div class = "socials">
+        <a class = "social_link" href="#"><i class="fab fa-facebook-f"></i></a>
+        <a class = "social_link" href="#"><i class="fab fa-instagram"></i></a>
+        <a class = "social_link" href="#"><i class="fab fa-twitter"></i></a>
+        <a class = "social_link" href="#"><i class="fab fa-youtube"></i></a>
+        <a class = "social_link" href="#"><i class="fab fa-reddit"></i></a>
+    </div>
+
+</footer>
 </html>
