Grid Updates for bike page

--- a/bikes.html
+++ b/bikes.html
@@ -60,7 +60,7 @@
                 <h3 class ="bike_header">For Hire Bikes</h3>
             </div>
                 <div class = "bike_grid">
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -69,7 +69,7 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -78,7 +78,7 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -87,7 +87,7 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -114,7 +114,7 @@
                 <h3 class ="bike_header">Mountain Bikes</h3>
             </div>
                 <div class = "bike_grid">
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -123,7 +123,7 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -132,7 +132,7 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -141,7 +141,7 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -168,7 +168,7 @@
                 <h3 class ="bike_header">For Hire Bikes</h3>
             </div>
                 <div class = "bike_grid">
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -177,7 +177,7 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -186,7 +186,7 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -195,7 +195,7 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
@@ -204,7 +204,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="grid_items">
+                    <div class="bike_grid_items">
                         <div class = "bike_card">
                             <img class = "bike_img" src="/imgs/bike.jpg" alt="Image grid item">
                                 <div class="card_info">
