Added servicing page and bug fixes

--- a/bikes.html
+++ b/bikes.html
@@ -22,10 +22,12 @@
         </a>
         <div class="navbar-links">
             <ul>
-                <form action="">
-                    <input type="text">
-                    <button id = "nav_search" class = search_bar><i class="fas fa-search"></i></button> 
-                </form>
+                <div class ="nav_form">
+                    <form action="">
+                        <input type="text">
+                        <!-- <button id = "nav_search" class = search_bar><i class="fas fa-search"></i></button>  -->
+                    </form>
+                </div>
                 <li><a href="bikes.html" class = "tag-link current">Bikes <i class="fas fa-bicycle"></i></a></li>
                 <li><a href="service.html" class = "tag-link">Servicing <i class="fas fa-wrench"></i></a></li>
                 <li><a href="accessories.html" class = "tag-link">Accessories <i class="fas fa-shopping-bag"></i></a> </li>
