--- a/about.html
+++ b/about.html
@@ -22,10 +22,12 @@
         </a>
         <div class="navbar-links">
             <ul>
-                <form action="">
-                    <input type="text">
-                    <button id = "nav_search" class = search_bar><i class="fas fa-search"></i></button> 
-                </form>
+                <div class ="nav_form">
+                    <form action="">
+                        <input type="text">
+                        <!-- <button id = "nav_search" class = search_bar><i class="fas fa-search"></i></button>  -->
+                    </form>
+                </div>
                 <li><a href="bikes.html" class = "tag-link">Bikes <i class="fas fa-bicycle"></i></a></li>
                 <li><a href="service.html" class = "tag-link">Servicing <i class="fas fa-wrench"></i></a></li>
                 <li><a href="accessories.html" class = "tag-link">Accessories <i class="fas fa-shopping-bag"></i></a> </li>
@@ -76,7 +78,7 @@
             </div>
             <div class="form_group">
                 <label for="email" class="form_label">Email address</label>
-                <input type="email" class="form_input" name="_replyto" placeholder="Email address"required>
+                <input type="email" class="form_input" name="_replyto" placeholder="Email"required>
                 <input class = "button_submit" type="submit" value="Sign up">
             </div>
             <!-- <div class="form_group">
