--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
         
         <div class="navbar-links">
             <ul>
-                <form action="">
-                    <input type="text">
-                    <button id = "nav_search" class = search_bar><i class="fas fa-search"></i></button> 
-                </form>
+                <div class ="nav_form">
+                    <form action="">
+                        <input type="text">
+                        <!-- <button id = "nav_search" class = search_bar><i class="fas fa-search"></i></button>  -->
+                    </form>
+                </div>
                 <li><a href="bikes.html" class = "tag-link">Bikes <i class="fas fa-bicycle"></i></a></li>
                 <li><a href="service.html" class = "tag-link">Servicing <i class="fas fa-wrench"></i></a></li>
                 <li><a href="accessories.html" class = "tag-link">Accessories <i class="fas fa-shopping-bag"></i></a> </li>
@@ -102,7 +104,6 @@
      <script src="/js/script.js"></script>
 
 </script>
-</body>
 <footer>
     <div class = "grid">
         <div class = "grid_item">
@@ -141,4 +142,6 @@
     </div>
 
 </footer>
+</body>
+
 </html> 
