--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/gallery.css">
+    <link rel="stylesheet" href="/css/lightbox.min.css">
     <script src="https://kit.fontawesome.com/faea18554b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -38,68 +39,62 @@
             </ul>
         </div>
     </nav>
+    <section class = "gallery_section">
 
-    <section class = "gallery">
-        <div class="grid_container">
-        <div class = "gallery_grid">
-            <div class="grid_items">
-                <div class = "gallery_card">
-                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
-                    <div class="card_info">
-                    <p class = "gallery_submitted"> submitted by *name*</p>
-                    <p class = "gallery_date">12/09/2020</p>
-                    </div>
+
+
+
+
+        <div class = "gallery">
+            <div class  ="gallery_grid">
+                
+                <div class="gallery_grid_item">
+                    <div class="gallery_card">
+                        <a href="/imgs/bike_gallery.jpg" data-lightbox="mygallery" data-title="Trial"><img src="/imgs/bike_gallery.jpg" alt =""></a>
+                    </div>    
                 </div>
-            </div>
-            <div class="grid_items">
-                <div class = "gallery_card">
-                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
-                    <div class="card_info">
-                    <p class = "gallery_submitted"> submitted by *name*</p>
-                    <p class = "gallery_date">12/09/2020</p>
-                    </div>
+
+                <div class="gallery_grid_item">
+                    <div class="gallery_card">
+                        <a href="/imgs/bike_gallery_2.jpg" data-lightbox="mygallery" data-title="Trial"><img src="/imgs/bike_gallery_2.jpg" alt =""></a>
+                    </div>    
                 </div>
-            </div>
-            <div class="grid_items">
-                <div class = "gallery_card">
-                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
-                    <div class="card_info">
-                    <p class = "gallery_submitted"> submitted by *name*</p>
-                    <p class = "gallery_date">12/09/2020</p>
-                    </div>
+
+
+                <div class="gallery_grid_item">
+                    <div class="gallery_card">
+                        <a href="/imgs/bike_gallery_mountains.jpg" data-lightbox="mygallery" data-title="Trial"><img src="/imgs/bike_gallery_mountains.jpg" alt =""></a>
+                    </div>    
                 </div>
-            </div>
-            <div class="grid_items">
-                <div class = "gallery_card">
-                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
-                    <div class="card_info">
-                    <p class = "gallery_submitted"> submitted by *name*</p>
-                    <p class = "gallery_date">12/09/2020</p>
-                    </div>
+
+                <div class="gallery_grid_item">
+                    <div class="gallery_card">
+                        <a href="/imgs/bike_gallery_roadrace.jpg" data-lightbox="mygallery" data-title="Trial"><img src="/imgs/bike_gallery_roadrace.jpg" alt =""></a>
+                    </div>    
                 </div>
-            </div>
-            <div class="grid_items">
-                <div class = "gallery_card">
-                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
-                    <div class="card_info">
-                    <p class = "gallery_submitted"> submitted by *name*</p>
-                    <p class = "gallery_date">12/09/2020</p>
-                    </div>
+
+                <div class="gallery_grid_item">
+                    <div class="gallery_card">
+                        <a href="/imgs/bike_gallery_trails.jpg" data-lightbox="mygallery" data-title="Trial"><img src="/imgs/bike_gallery_trails.jpg" alt =""></a>
+                    </div>    
                 </div>
-            </div>
-            <div class="grid_items">
-                <div class = "gallery_card">
-                    <img class = "gallery_img" src="/imgs/bike.jpg" alt="Image grid item">
-                    <div class="card_info">
-                    <p class = "gallery_submitted"> submitted by *name*</p>
-                    <p class = "gallery_date">12/09/2020</p>
-                    </div>
+
+                <div class="gallery_grid_item">
+                    <div class="gallery_card">
+                        <a href="/imgs/bike_gallery_biker.jpg" data-lightbox="mygallery" data-title="Trial"><img src="/imgs/bike_gallery_biker.jpg" alt =""></a>
+                    </div>    
+                </div>
+
+                <div class="gallery_grid_item">
+                    <div class="gallery_card">
+                        <a href="/imgs/bike_gallery_jump.jpg" data-lightbox="mygallery" data-title="Trial"><img src="/imgs/bike_gallery_jump.jpg" alt =""></a>
+                    </div>    
                 </div>
             </div>
         </div>
-    </div>
     </section>
     <script src="/js/script.js"></script>
+    <script src="/js/lightbox-plus-jquery.min.js"></script>
 </body>
 <footer>
     <div class = "grid">
