Added trails cards and styling

--- a/bikes.html
+++ b/bikes.html
@@ -167,7 +167,7 @@
         <!-- Road Bikes -->
         <div class="road_bikes">
             <div class = header_container>
-                <h3 class ="bike_header">For Hire Bikes</h3>
+                <h3 class ="bike_header">Road Bikes</h3>
             </div>
                 <div class = "bike_grid">
                     <div class="bike_grid_items">
