Worse but free map integration and some style changes

--- a/trails.html
+++ b/trails.html
@@ -39,8 +39,8 @@
     </nav>
     <section class="section_trails" id="section_trails">
         <div class="">
-                <h2 class="heading">
-                    Most popular trails
+                <h2 class="trails_heading">
+                    Our most popular local trails
                 </h2>
         </div>
 
