--- a/about.html
+++ b/about.html
@@ -48,25 +48,49 @@
     </div>
         <div class="content_box text_box">
             <h2>We are border king Bikes</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores, perspiciatis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Explicabo aliquam quasi aut possimus non, magnam quam ducimus rem porro illo neque sit architecto nostrum totam, 
+                voluptate reiciendis sunt consectetur quae excepturi! Totam facere pariatur odio porro. Consectetur eveniet maiores dolorem, 
+                voluptatum officia aperiam sapiente illum doloribus cum distinctio tempora sint consequatur at laboriosam ducimus a excepturi, 
+                quisquam quibusdam, iure cumque unde. Alias fugiat nostrum eligendi nemo, quis illo repellendus rem tempora vitae aliquid 
+                perspiciatis natus odit doloribus dolores quam! Cumque dolore eius saepe in facilis voluptatum, fugiat itaque. 
+                Ex quia tempora vitae asperiores minima magnam recusandae dignissimos, atque error odio.
+            </p>
         </div>
         </div>
 <div class="container">
         <div class="content_box text_box">
         <h2>Where can you find us?</h2>
-        <p>You can find us at 7 Bike shop Lane, Border town</p>
-        <p>You can contact us if needed here:</p>
+        <p>123 Wheel Drive, Galashiels</p>
+        <p>You can contact us if needed here:
+            <br>
+            01234 567 567
+            <br>
+            BikeKing@borders.uk
+        </p>
 
     </div>
-        <div class = "map_box content_box"><div id = "map"></div>
-        <p>The map works in functionality but im not enabling the payments so youre stuck with this shite</p>
+    <div class = "map_box content_box">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d421.95009874245756!2d-2.813160362312265!3d55.620402915506745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887680c4766bb4d%3A0xdcf6a099448fe465!2sGalashiels!5e0!3m2!1sen!2suk!4v1600866636364!5m2!1sen!2suk" 
+    width="600" 
+    height="450" 
+    frameborder="0" 
+    style="border:0;" 
+    allowfullscreen=""
+     aria-hidden="false"
+      tabindex="0"></iframe>
+        <!-- <div class = "map_box content_box"><div id = "map"></div>-->
+        <p>This map works however i did have proper one set up with the google API that had local landmarks and pins but it costs money to access the API and Im not about that</p> 
+    </div>
     </div>
     </div>
 
     <div class="container">
         <div class = "content_box text_box">
             <h2>Sign up for our newsletter</h2>
-            <p>To hear about the latest in biking, sign up today!</p>
+            <p>Become part of our local, thriving biking community</p>
+            <p>Hear the lastest in local biking news first</p>
+            <p>Sign up today!</p>
         </div>
         <form action="post" class = "form" method = "post">
             <div class = "heading_secondary">
@@ -90,7 +114,7 @@
     </section>
 
 <script src="/js/script.js"></script>
-<script src="/js/map.js"></script>
+<!-- <script src="/js/map.js"></script> -->
 <!-- <script defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3FozSB6AqIxgmTqrEx7Hro8PpFGtn11o&callback=initMap">
 </script> -->
