--- a/service.html
+++ b/service.html
@@ -52,11 +52,11 @@
         <div  class = "servicing_form_container">
         <form class = "service_form" action="">
             <div class = "form_group">
-                <input class ="form_input" type="text">
+                <input class ="form_input" type="text" required>
                 <label class ="form_label" for="Name">Enter your name</label>
             </div>
             <div class = "form_group">
-                <input class ="form_input" type="email">
+                <input class ="form_input" type="email" required>
                 <label class ="form_label" for="email">Enter your email</label>
             </div>
             <div class = "form_group">
@@ -65,17 +65,17 @@
             </div>
             <div class = "form_group">
                 <label class ="form_label" for="Name">I would prefer to be contacted by:</label>
-                <div class="radio_box"><input class ="radio" type="radio" name = "preference"> <label for="preference_email">Email</label></div>
-                <div class="radio_box"><input class ="radio" type="radio" name = "preference"> <label for="preference_phone">Phone</label></div>
-                <div class="radio_box"> <input class ="radio" type="radio" name = "preference"> <label for="preference_either">Either</label></div>
+                <div class="radio_box"><input class ="radio" type="radio" name = "preference" required> <label for="preference_email">Email</label></div>
+                <div class="radio_box"><input class ="radio" type="radio" name = "preference" required> <label for="preference_phone">Phone</label></div>
+                <div class="radio_box"> <input class ="radio" type="radio" name = "preference" required> <label for="preference_either">Either</label></div>
                
             </div>
             <div class = "form_group">
-                <input class ="form_input" type="text">
+                <input class ="form_input" type="text" required>
                 <label class ="form_label" for="Bike">Enter your model of bike</label>
             </div>
             <div class = "form_group">
-                <textarea class ="form_input" name="message" ></textarea>
+                <textarea class ="form_input" name="message" required></textarea>
                 <label class ="form_label" for="Phone">Tell us a briefly about your needs, we will discuss further when we contact you</label>
                 <input class = "button_submit" type="submit" value="Submit">
             </div>
