--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </div>
         </div>
     </section>
-
-    <section class  = "about">
+    <div  id ="particles-js"></div>
+    <section class = "about">
         <div class="container">
         <a href="about.html">
         <div class = "about_box">
@@ -98,10 +98,17 @@
     </div>
         </a>
 
+        
         </div>
     </section>
 
      <script src="/js/script.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+     <script>
+         particlesJS.load('particles-js', 'particlesjs-config.json', function() {
+    console.log('callback - particles.js config loaded');
+    });
+     </script>
 
 </script>
 <footer>
