--- a/service.html
+++ b/service.html
@@ -48,6 +48,7 @@
             <img class = "service_img" src="/imgs/service.png" alt="Picture of guy on bike ">
         </div>
     </section>
+    <div id="particles-js"></div>
     <section>
         <div  class = "servicing_form_container">
         <form class = "service_form" action="">
@@ -121,6 +122,12 @@
         </div>
     
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+        <script>
+            particlesJS.load('particles-js', 'particlesjs-config.json', function() {
+        console.log('callback - particles.js config loaded');
+        });
+        </script>
     <script src="/js/script.js"></script>
 </body>
 </html>
