--- a/trails.html
+++ b/trails.html
@@ -44,7 +44,7 @@
                 </h2>
                 <p>See where the locals like to cycle</p>
         </div>
-
+        <div  id ="particles-js"></div>
 <!-- START OF ROW 1-->
         <div class="row2">
             <!-- Trail Card 1 -->
@@ -563,6 +563,12 @@
     </div>
     
 </footer>
+        <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+        <script>
+            particlesJS.load('particles-js', 'particlesjs-config.json', function() {
+        console.log('callback - particles.js config loaded');
+        });
+        </script>
     <script src="/js/script.js"></script>
 </body>
 </html>
