--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
     </nav>
-
+    <div  id ="particles-js"></div>
     <section>
         <div class = "container">
             <div class="content_box">
@@ -118,7 +118,12 @@
 <!-- <script defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3FozSB6AqIxgmTqrEx7Hro8PpFGtn11o&callback=initMap">
 </script> -->
-
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+        <script>
+            particlesJS.load('particles-js', 'particlesjs-config.json', function() {
+        console.log('callback - particles.js config loaded');
+        });
+        </script>
 </body>
 <footer>
     <div class = "grid">
