--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class = "main_content">  
         <div class = "header">
         <div class = "container">
-            <img class ="logo_img" src="/imgs/alternate_logo.png" alt="This is the main logo">
+            <img class ="logo_img" src="/imgs/BKBLogo.png" alt="This is the main logo">
             <div>
             <p class = "main_content"> The number <span class = "emphasis"> one </span> bike store in the borders</p>
             <p class = "sub_heading location"> 123 Wheel Drive, Galashiels</p>
