--- a/accessories.html
+++ b/accessories.html
@@ -208,5 +208,6 @@
         </div>
     </div>
     <script src="/js/script.js"></script>
+    <script src="/js/divToggle.js"></script>
 </body>
 </html>
