Fixes and Changes

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <!-- NAVBAR -->
     <nav class = "navbar">
         <div class = "title">
-            <a href="/index.html">Border Bikes</a>
+            <a href="/index.html">BIKE KING</a>
         </div>
         <a href="/index.html" class = "toggle-button">
             <span class = "bar"></span>
