--- a/accessories.html
+++ b/accessories.html
@@ -43,7 +43,7 @@
         <p>Find the perfect accessory for your cycling needs!</p>
     </div>
         <div>
-            <img class = "accessories_img" src="/imgs/accessories.png" alt="">
+            <img class = "accessories_header_img" src="/imgs/accessories.png" alt="">
         </div>
     </div>
     <div  id ="particles-js"></div>
