--- a/trails.html
+++ b/trails.html
@@ -50,7 +50,7 @@
                     <p>Find and event to suit you</p>
                     <p>Visit local landmarks that are bike friendly</p>
                 </div>
-                <img class="service_img" src="/imgs/service.png" alt="Picture of guy on bike ">
+                <img class="trails_img" src="/imgs/service.png" alt="Picture of guy on bike ">
             </div>
         </div>
         <div id="particles-js"></div>
