Search bar icon added to index as test

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class ="nav_form">
                     <form action="">
                         <input type="text">
-                        <!-- <button id = "nav_search" class = search_bar><i class="fas fa-search"></i></button>  -->
+                        <button id = "nav_search" class = search_bar><i class="fas fa-search"></i></button> 
                     </form>
                 </div>
                 <li><a href="bikes.html" class = "tag-link">Bikes <i class="fas fa-bicycle"></i></a></li>
