Updated Bikes page

--- a/accessories.html
+++ b/accessories.html
@@ -277,6 +277,6 @@
         });
         </script>
     <script src="/js/script.js"></script>
-    <script src="/js/divToggle.js"></script>
+    <script src="/js/AccDivToggle.js"></script>
 </body>
 </html>
