--- a/bikes.html
+++ b/bikes.html
@@ -66,9 +66,9 @@
                     <div class = "accessories_grid">
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/hat.png" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/Barracude Hydrus Hybrid.jpg" alt="Image grid item">
                                     <div class="card_info">
-                                        <p class = ""> Flat Black Snap Back</p>
+                                        <p class = "">Hire 1</p>
                                         <p class = "">Product code: 123123123</p>
                                         <p class = "">£20</p>
                                     </div>
@@ -76,9 +76,9 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/warmBobbleHat.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/Barracude Hydrus Hybrid.jpg" alt="Image grid item">
                                 <div class="card_info">
-                                    <p class = "">Warm Bobble Hat</p>
+                                    <p class = "">Hire 2</p>
                                     <p class = "">Product code: 1234123412</p>
                                     <p class = "">£25</p>
                                 </div>
@@ -86,9 +86,9 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/blackBeanie.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/Barracude Hydrus Hybrid.jpg" alt="Image grid item">
                                 <div class="card_info">
-                                    <p class = "">Comfy Black Beanie</p>
+                                    <p class = "">Hire 3</p>
                                     <p class = "">Product code: 321356489</p>
                                     <p class = "">£15</p>
                                 </div>
@@ -96,9 +96,9 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/multiBeanie.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/Barracude Hydrus Hybrid.jpg" alt="Image grid item">
                                 <div class="card_info">
-                                    <p class = "">Multi Coloured Benie</p>
+                                    <p class = "">Hire 4</p>
                                     <p class = "">Product code:1112323123</p>
                                     <p class = "">£12</p>
                                 </div>
@@ -106,9 +106,9 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/bobblehatColour.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/Barracude Hydrus Hybrid.jpg" alt="Image grid item">
                                 <div class="card_info">
-                                    <p class = "">Colourful Bobble hat</p>
+                                    <p class = "">Hire 5</p>
                                     <p class = "">Product code: 225225335</p>
                                     <p class = "">£25</p>
                                 </div>
