--- a/service.html
+++ b/service.html
@@ -49,7 +49,7 @@
                 <p>Let us help you take care of it</p>
                 <h5>Fill out our form below to get the exact service you require</h5>
             </div>
-            <img class="service_img" src="/imgs/service.png" alt="Picture of guy on bike ">
+            <img class="service_img" src="/imgs/serviceContact.png" alt="Picture of guy on bike ">
         </div>
     </section>
     <div id="particles-js"></div>
