--- a/trails.html
+++ b/trails.html
@@ -19,7 +19,7 @@
             <a href="/index.html">BIKE KING</a>
         </div>
         <a href="#" class="toggle-button">
-            <span class="bar"></span>\
+            <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
         </a>
