--- a/gallery.html
+++ b/gallery.html
@@ -39,6 +39,13 @@
             </ul>
         </div>
     </nav>
+    <section class = "gallery_info">
+        <div class="container">
+            <h2>Check out some of the images of our local community
+            </h2>
+            <img class = "gallery_header_image" src="/imgs/gallery.png" alt="">
+        </div>
+    </section>
     <section class = "gallery_section">
 
 
