Removed img tag spaces

--- a/bikes.html
+++ b/bikes.html
@@ -60,7 +60,7 @@
                     <div class = "accessories_grid">
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Barracude Hydrus Hybrid.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/BarracudeHydrusHybrid.jpg" alt="Image grid item">
                                     <div class="card_info">
                                         <p class = "">Hire 1</p>
                                         <p class = "">Product code: 123123123</p>
@@ -70,7 +70,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Barracude Hydrus Hybrid.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/BarracudeHydrusHybrid.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Hire 2</p>
                                     <p class = "">Product code: 1234123412</p>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Barracude Hydrus Hybrid.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/BarracudeHydrusHybrid.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Hire 3</p>
                                     <p class = "">Product code: 321356489</p>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Barracude Hydrus Hybrid.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/BarracudeHydrusHybrid.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Hire 4</p>
                                     <p class = "">Product code:1112323123</p>
@@ -100,7 +100,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Barracude Hydrus Hybrid.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/BarracudeHydrusHybrid.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Hire 5</p>
                                     <p class = "">Product code: 225225335</p>
@@ -116,7 +116,7 @@
                     <div class = "accessories_grid">
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Gestalt X11.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/GestaltX11.jpg" alt="Image grid item">
                                     <div class="card_info">
                                         <p class = "">Gestalt X11</p>
                                         <p class = "">Product code: 123123123</p>
@@ -126,7 +126,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/myvovo 26 inch.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/myvovo26inch.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">myvovo 26 inch</p>
                                     <p class = "">Product code: 1234123412</p>
@@ -136,7 +136,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Transition TR11 Carbon X01.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/TransitionTR11Carbon X01.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Transition TR11 Carbon X01</p>
                                     <p class = "">Product code: 321356489</p>
@@ -146,7 +146,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Trek Roscoe 7 Hardtail.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/TrekRoscoe7Hardtail.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Trek Roscoe 7 Hardtail</p>
                                     <p class = "">Product code:1112323123</p>
@@ -156,7 +156,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Yeti SB150 T-Series X01.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/YetiSB150T-SeriesX01.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Yeti SB150 T-Series X01</p>
                                     <p class = "">Product code: 225225335</p>
@@ -182,7 +182,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Merlin Cycles.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/MerlinCycles.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Merlin Cycles</p>
                                     <p class = "">Product code: 1234123412</p>
@@ -192,7 +192,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/N+ Mercedes-AMG Petronas V11 Road Bikes.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/N+ Mercedes-AMGPetronasV11RoadBikes.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">N+ Merces-AMG Petronas V11 Road Bike</p>
                                     <p class = "">Product code: 321356489</p>
@@ -202,7 +202,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Orro Gold Signature Ultegra Di2 WIND400.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/OrroGoldSignatureUltegraDi2WIND400.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Orro Gold Signature Ultegra Di2 WIND400</p>
                                     <p class = "">Product code:1112323123</p>
@@ -212,7 +212,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/SAVANE Carbon Warwind 3.0 700C.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/SAVANECarbonWarwind3.0700C.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">SAVANE Carbon Warwind 3.0 700C</p>
                                     <p class = "">Product code: 225225335</p>
@@ -238,7 +238,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Barracude Hydrus Hybrid.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/BarracudeHydrusHybrid.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Barracude Hydrus Hybrid</p>
                                     <p class = "">Product code: 1234123412</p>
@@ -248,7 +248,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/GIANT FASTROAD ADVANCED.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/GIANTFASTROADADVANCED.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Comfy Black Beanie</p>
                                     <p class = "">Product code: 321356489</p>
@@ -264,7 +264,7 @@
                     <div class = "accessories_grid">
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Apollo Outrage Kids Bike.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/ApolloOutrageKidsBike.jpg" alt="Image grid item">
                                     <div class="card_info">
                                         <p class = "">Apollo Outrage Kids Bike</p>
                                         <p class = "">Product code: 123123123</p>
@@ -274,7 +274,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/Squish Lightweight kids bike.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/SquishLightweightkidsbike.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Squish Lightweight kids bike</p>
                                     <p class = "">Product code: 1234123412</p>
@@ -284,7 +284,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/bikes/Yonntech Freestyle 16 inch.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/bikes/YonntechFreestyle16inch.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Yonntech Freestyle 16 inch</p>
                                     <p class = "">Product code: 321356489</p>
