--- a/bikes.html
+++ b/bikes.html
@@ -192,7 +192,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/N+ Mercedes-AMGPetronasV11RoadBikes.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/N+Mercedes-AMGPetronasV11RoadBikes.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">N+ Merces-AMG Petronas V11 Road Bike</p>
                                     <p class = "">Product code: 321356489</p>
