--- a/bikes.html
+++ b/bikes.html
@@ -136,7 +136,7 @@
                         </div>
                         <div class="accessories_grid_items">
                             <div class = "accessories_card">
-                                <img class = "accessories_img" src="/imgs/Bikes/TransitionTR11Carbon X01.jpg" alt="Image grid item">
+                                <img class = "accessories_img" src="/imgs/Bikes/TransitionTR11CarbonX01.jpg" alt="Image grid item">
                                 <div class="card_info">
                                     <p class = "">Transition TR11 Carbon X01</p>
                                     <p class = "">Product code: 321356489</p>
