--- a/service.html
+++ b/service.html
@@ -52,18 +52,18 @@
             <form class="service_form" action="#">
                 <div class="form_group">
                     <input class="form_input" type="text" required>
-                    <label class="form_label" id="Name">Enter your name</label>
+                    <label class="form_label" for="Name">Enter your name</label>
                 </div>
                 <div class="form_group">
                     <input class="form_input" type="email" required>
-                    <label class="form_label" id="email">Enter your email</label>
+                    <label class="form_label" for="email">Enter your email</label>
                 </div>
                 <div class="form_group">
                     <input class="form_input" type="text">
-                    <label class="form_label" id="Phone">Enter your phone number</label>
+                    <label class="form_label" for="Phone">Enter your phone number</label>
                 </div>
                 <div class="form_group">
-                    <label class="form_label" id="Name">I would prefer to be contacted by:</label>
+                    <label class="form_label" for="Name">I would prefer to be contacted by:</label>
                     <div class="radio_box"><input class="radio" type="radio" name="preference" required> <label
                             for="preference_email">Email</label></div>
                     <div class="radio_box"><input class="radio" type="radio" name="preference" required> <label
@@ -74,11 +74,11 @@
                 </div>
                 <div class="form_group">
                     <input class="form_input" type="text" required>
-                    <label class="form_label" id="Bike">Enter your model of bike</label>
+                    <label class="form_label" for="Bike">Enter your model of bike</label>
                 </div>
                 <div class="form_group">
                     <textarea class="form_input" name="message" required></textarea>
-                    <label class="form_label" id="Phone">Tell us a briefly about your needs, we will discuss further
+                    <label class="form_label" for="Phone">Tell us a briefly about your needs, we will discuss further
                         when we contact you</label>
                     <input class="button_submit" type="submit" value="Submit">
                 </div>
