--- a/service.html
+++ b/service.html
@@ -51,15 +51,15 @@
         <div class="servicing_form_container">
             <form class="service_form" action="#">
                 <div class="form_group">
-                    <input class="form_input" type="text" required>
+                    <input class="form_input" type="text" required id ="Name">
                     <label class="form_label" for="Name">Enter your name</label>
                 </div>
                 <div class="form_group">
-                    <input class="form_input" type="email" required>
+                    <input class="form_input" type="email" id ="email"required>
                     <label class="form_label" for="email">Enter your email</label>
                 </div>
                 <div class="form_group">
-                    <input class="form_input" type="text">
+                    <input class="form_input" type="text" id ="Phone">
                     <label class="form_label" for="Phone">Enter your phone number</label>
                 </div>
                 <div class="form_group">
@@ -73,12 +73,12 @@
 
                 </div>
                 <div class="form_group">
-                    <input class="form_input" type="text" required>
+                    <input class="form_input" type="text" required id ="Bike">
                     <label class="form_label" for="Bike">Enter your model of bike</label>
                 </div>
                 <div class="form_group">
-                    <textarea class="form_input" name="message" required></textarea>
-                    <label class="form_label" for="Phone">Tell us a briefly about your needs, we will discuss further
+                    <textarea class="form_input" name="message" id ="Message"required></textarea>
+                    <label class="form_label" for="Message">Tell us a briefly about your needs, we will discuss further
                         when we contact you</label>
                     <input class="button_submit" type="submit" value="Submit">
                 </div>
