--- a/service.html
+++ b/service.html
@@ -55,7 +55,7 @@
                     <label class="form_label" for="Name">Enter your name</label>
                 </div>
                 <div class="form_group">
-                    <input class="form_input" type="email" id ="email"required>
+                    <input class="form_input" type="email" id ="email" required>
                     <label class="form_label" for="email">Enter your email</label>
                 </div>
                 <div class="form_group">
@@ -64,11 +64,11 @@
                 </div>
                 <div class="form_group">
                     <label class="form_label" for="Name">I would prefer to be contacted by:</label>
-                    <div class="radio_box"><input class="radio" type="radio" name="preference" required> <label
+                    <div class="radio_box"><input class="radio" type="radio" name="preference" id ="preference_email" required> <label
                             for="preference_email">Email</label></div>
-                    <div class="radio_box"><input class="radio" type="radio" name="preference" required> <label
+                    <div class="radio_box"><input class="radio" type="radio" name="preference" id ="preference_phone" required> <label
                             for="preference_phone">Phone</label></div>
-                    <div class="radio_box"> <input class="radio" type="radio" name="preference" required> <label
+                    <div class="radio_box"> <input class="radio" type="radio" name="preference" id ="preference_either" required> <label
                             for="preference_either">Either</label></div>
 
                 </div>
@@ -77,7 +77,7 @@
                     <label class="form_label" for="Bike">Enter your model of bike</label>
                 </div>
                 <div class="form_group">
-                    <textarea class="form_input" name="message" id ="Message"required></textarea>
+                    <textarea class="form_input" name="message" id ="Message" required></textarea>
                     <label class="form_label" for="Message">Tell us a briefly about your needs, we will discuss further
                         when we contact you</label>
                     <input class="button_submit" type="submit" value="Submit">
