--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-     <script src="/js/script.js"></script>
+     <script defer src="/js/script.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
      <script>
          particlesJS.load('particles-js', 'particlesjs-config.json', function() {
