--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
 </a>
 
-<a href="bikes.html">
+<a href="about.html">
     <div class = "about_box">
         <h2 class = "about_us">Gallery of our bikes and trails to get you interested</h2>
         <img class ="about_img" src="/imgs/gallery.png" alt="Some image">
