--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
      <script defer src="/js/script.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-     <script defer>
+     <script>
          particlesJS.load('particles-js', 'particlesjs-config.json', function() {
     console.log('callback - particles.js config loaded');
     });
